# federated-learning-attack-framework

./: .gitignore  404.html  README.md  clientapp.Dockerfile  index.html  mkdocs.yml  objects.inv  pyproject.toml  serverapp.Dockerfile  tmp.py
docs/: index.md  reference.md
docs/reference/: federated-learning-attack-framework.md  index.md  server.md  task.md
docs/reference/framework/: client.md  index.md
docs/reference/framework/utils/: index.md  task.md
docs/reference/launchers/: docker.md  index.md
docs/reference/utils/: data.md
federated_learning_attack_framework/: __init__.py  client.py  client_app.py  server.py  server_app.py  task.py
federated_learning_attack_framework/utils/: __init__.py  data.py  task.py
launchers/: __init__.py  docker-deployment.py
reference/: index.html
reference/client/: index.html
reference/federated-learning-attack-framework/: index.html
reference/framework/: index.html
reference/framework/client/: index.html
reference/framework/server/: index.html
reference/framework/utils/: index.html
reference/framework/utils/data/: index.html
reference/framework/utils/task/: index.html
reference/launchers/: index.html
reference/launchers/docker/: index.html
reference/server/: index.html
reference/task/: index.html
reference/utils/: index.html
reference/utils/data/: index.html
reference/utils/task/: index.html
